--- a/portfolio.css
+++ b/portfolio.css
@@ -1,38 +1,84 @@
 html,
-body{
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+body {
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
-main{
-    border: 1px solid gray;
-    width: 900px;
-    
-     display: inline-block;
-    border-radius: 10px;
-    
-    padding: 30px;
-    box-shadow: 10px 5px 5px;
-    background-color: rgb(236, 114, 138);  
-    
-     background-image: url(./faded\ picture.jpg);
-     
-     background-repeat: no-repeat; 
+main {
+  border: 1px solid gray;
+  width: 900px;
+  display: inline-block;
+  border-radius: 10px;
+  font-size: 17px;
+  padding: 20px;
+  box-shadow: 10px 5px 5px;
+  background-color: rgb(176, 199, 193);
+  background-image: url(./faded\ picture.jpg);
+  background-repeat: no-repeat;
 }
-.class1{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+.sections_tab {
+  display: flex;
+  gap: 19px;
+  text-transform: capitalize;
+  margin-left: 250px;
+  padding-bottom: 30px;
+  color: rgba(88, 54, 54, 0.377);
+  font-weight: 600;
 }
-.class2{
-    padding: 20px;
-    margin-left: 110px;
-    margin-bottom: 50px;
+#contact_section{
+  border: 1px solid gray;
+  border-radius: 5px;
+  height: 23px;
+  width: fit-content;
+  background-color: rgb(20, 29, 29);
+  color: rgba(245, 245, 245, 0.842);
 
 }
-img{
-    height: 250px;
-    width: 270px;
-    margin-left: 2px;
+.class1 {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
 }
-ul li{
-    list-style-type: square;
-    margin-left: 110px;
+.sub_class {
+  margin-left: 100px;
+}
+.logo_container {
+  display: flex;
+}
+h4 {
+  margin-left: 24px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-style: italic;
+  font-size: 20px;
+}
+
+img {
+  height: 250px;
+  width: 270px;
+  border-radius: 50%;
+  margin-left: 2px;
+}
+.image_container > img {
+  height: 70px;
+  width: 100px;
+  box-shadow: 10px 5px 5px crimson;
+}
+ul li {
+  list-style: none;
+  padding-left: 50px;
+  padding-bottom: 15px;
+  margin-bottom: 10px;
+  margin-left: 110px;
+  position: relative;
+  font-weight: 550;
+  font-style: italic;
+}
+ul li:before {
+  content: "";
+  position: absolute;
+  top: 1px;
+  left: 5px;
+  display: inline-block;
+  height: 30px;
+  width: 30px;
+  background-size: contain;
+  background-image: url("./small_rocket.png");
 }
