--- a/portfolio.css
+++ b/portfolio.css
@@ -1,24 +1,22 @@
 html,
 body {
+  background-color: rgb(218, 61, 178);
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 main {
   border: 1px solid gray;
-  width: 900px;
   display: inline-block;
   border-radius: 10px;
   font-size: 17px;
+  margin: 10px;
   padding: 20px;
-  box-shadow: 10px 5px 5px;
   background-color: rgb(176, 199, 193);
-  background-image: url(./faded\ picture.jpg);
-  background-repeat: no-repeat;
 }
 .sections_tab {
   display: flex;
   gap: 19px;
   text-transform: capitalize;
-  margin-left: 250px;
+  margin-left: 40%;
   padding-bottom: 30px;
   color: rgba(88, 54, 54, 0.377);
   font-weight: 600;
@@ -35,50 +33,46 @@ main {
 .class1 {
   display: grid;
   grid-template-columns: 1fr 2fr;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  padding-left: 10%;
+  padding-right: 10%;
 }
 .sub_class {
   margin-left: 100px;
 }
 .logo_container {
-  display: flex;
+  display:flex;
 }
 h4 {
-  margin-left: 24px;
+  /* margin-left: 24px; */
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  font-style: italic;
-  font-size: 20px;
+  font-size: 12px;
 }
 
 img {
   height: 250px;
   width: 270px;
-  border-radius: 50%;
   margin-left: 2px;
 }
 .image_container > img {
-  height: 70px;
-  width: 100px;
-  box-shadow: 10px 5px 5px crimson;
+  height: 30px;
+  width: 30px;
+}
+ul{
+  margin-left: 20%;
+  margin-right: 20%;
 }
 ul li {
   list-style: none;
-  padding-left: 50px;
-  padding-bottom: 15px;
+  padding-left: 10px;
+  padding-right: 10px;
   margin-bottom: 10px;
-  margin-left: 110px;
+  margin-left: 10px;
   position: relative;
   font-weight: 550;
   font-style: italic;
-}
-ul li:before {
-  content: "";
-  position: absolute;
-  top: 1px;
-  left: 5px;
+  background-color: rgb(179, 179, 184);
   display: inline-block;
-  height: 30px;
-  width: 30px;
-  background-size: contain;
-  background-image: url("./small_rocket.png");
 }
